compiler/tests/run-pass/type-definitions.rsp
(import [risp base])

; Make sure _ eats the type
(deftype _ Int)
(deftype _ Float)