compiler/tests/compile-fail/if-errors.rsp
(import [risp base])

(def _ (if))            ;~ ERROR wrong arg count; expected 3
(def _ (if true))       ;~ ERROR wrong arg count; expected 3
(def _ (if true false)) ;~ ERROR wrong arg count; expected 3